# story-shot-agent

./: .env.example  README.md  README_zh.md  pyproject.toml
.claude/skills/story-shot-agent/: skill.json
.claude/skills/story-shot-agent/prompts/: system_prompt.md
.claude/skills/story-shot-agent/references/: coding_standards.md
docs/: v0.3 功能完成度评测报告.md
examples/: mcp_server_demo.py
scripts/: download_reranker.py
src/penshot/: logger.py
src/penshot/app/: application.py
src/penshot/config/: config.py  config_models.py
src/penshot/neopen/: shot_config.py
src/penshot/neopen/agent/: base_llm_agent.py  base_repairable_agent.py  prompt_converter_agent.py  quality_auditor_agent.py  script_parser_agent.py  shot_segmenter_agent.py  video_splitter_agent.py
src/penshot/neopen/agent/continuity_guardian/: continuity_guardian_checker.py  continuity_guardian_models.py
src/penshot/neopen/agent/prompt_converter/: llm_prompt_converter.py  prompt_converter_models.py
src/penshot/neopen/agent/quality_auditor/: base_quality_auditor.py  llm_quality_auditor.py  quality_auditor_enum.py  quality_auditor_models.py  rule_quality_auditor.py
src/penshot/neopen/agent/script_parser/: llm_script_parser.py
src/penshot/neopen/agent/shot_segmenter/: base_shot_segmenter.py  llm_shot_segmenter.py  shot_segmenter_models.py
src/penshot/neopen/agent/video_splitter/: base_video_splitter.py  llm_video_splitter.py  rule_video_splitter.py  video_splitter_models.py
src/penshot/neopen/agent/workflow/: workflow_checkpointer.py  workflow_decision.py  workflow_logger.py  workflow_memory.py  workflow_nodes.py  workflow_orchestrator.py  workflow_output_fixer.py  workflow_pipeline.py  workflow_state_types.py
src/penshot/neopen/cache/: adaptive_llm_cache.py  llm_cache.py
src/penshot/neopen/client/: client_config.py
src/penshot/neopen/knowledge/: knowledge_manager.py  llama_index_router.py
src/penshot/neopen/knowledge/llamaIndex/: llama_index_knowledge.py  llama_index_retriever.py  llama_index_tool.py
src/penshot/neopen/knowledge/memory/: long_term_memory.py  medium_term_memory.py  memory_context.py  memory_manager.py  memory_models.py  script_memory.py  short_term_memory.py
src/penshot/neopen/knowledge/template/: prompt_template_knowledge.py
src/penshot/neopen/prompts/: prompt_template_manager.py
src/penshot/neopen/prompts/v1.x/zh/: prompt_converter_prompt.yaml  quality_auditor_prompt.yaml  shot_segmenter_prompt.yaml
src/penshot/neopen/task/: task_models.py  task_processor.py
src/penshot/neopen/tools/: result_storage_tool.py
tests/knowledge/: check_docs.py  diagnose_index.py  knowledge_base_viewer.py  rebuild_index.py  test_fixed_index.py  test_knowledge_base.py  test_rerank.py  test_rerank_quality.py  test_vector_query.py
tests/task/: test_memory.py
tests/unit/: test_parse_dict.py
