[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "penshot.__version__" }

[project]
name = "penshot"
version = "0.3.3"
description = "AI agent that converts screenplays to consistent Text-to-Video prompts. Supports Sora, Runway, Kling, Veo via LangGraph & LLMs."

keywords = [
    "text-to-video", "script-to-prompt", "langgraph", "llm-agent",
    "prompt-engineering", "video-consistency", "ai-video-generation",
    "screenplay-parser", "mcp-protocol", "rest-api", "function-calling",
    "sora", "runway", "kling", "stable-video-diffusion",
    "文生视频", "剧本解析", "剧本分镜", "视频分镜", "分镜生成", "提示词工程", "AI视频"
]

authors = [
    { name = "HiPeng", email = "helpenx+shot@gmail.com" }
]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]

# ============================================================================
# 核心依赖（必须）
# ============================================================================
dependencies = [
    # Web框架
    #    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # 核心AI/LLM
    "langchain>=1.2.14",
    "langchain-community",
    "langchain-ollama>=1.0.0",
    "langchain-chroma>=1.0.0",
    "langgraph>=1.1.4",
        #    "langchain-deepseek>=0.1.0",
    #    "dashscope==1.23.9",
    # RAG/向量存储
    "chromadb>=1.5.6",
    "llama-index-core>=0.14.20",
    "llama-index-embeddings-langchain>=0.4.0",
        #    "llama-index-embeddings-openai>=0.1.0",
    #    "llama-index-embeddings-huggingface>=0.1.0",
    #    "llama-index-embeddings-ollama>=0.1.0",
    "langgraph-checkpoint-sqlite",
    # 配置与数据验证
    "pydantic>=2.11.10",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.0.0",
    "pyyaml",
    # 数据处理
    "numpy>=1.24.0",
    # pip install git+https://github.com/fxsjy/jieba.git@master
    # git -c http.proxy=http://127.0.0.1:7890 clone https://github.com/fxsjy/jieba.git
    "jieba>=0.42.1",
    "redis",
    # 工具库
    "tiktoken>=0.5.0",
    "colorama"
]

# ============================================================================
# 可选依赖分组
# ============================================================================
[project.optional-dependencies]
# 开发工具
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
]

# 测试依赖
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

# 视频处理
video = [
    "opencv-python>=4.8.0",
    "moviepy>=1.0.3",
    "pillow>=10.0.0",
]

# 文档生成
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

# API服务
api = [
    "fastapi>=0.104.0",
    "aiofiles>=23.2.0",
    "httpx>=0.25.0",
]

# 异步数据库支持
async_db = [
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
]

# 多LLM提供商
llm-providers = [
    "langchain-deepseek>=0.1.0",
    "langchain-openai>=1.0.0",
    "dashscope>=1.0.0",
]

# ============================================================================
# full 组合：通过引用其他分组实现（TOML 不支持变量，但 pip 支持组合）
# 安装时使用：pip install penshot[full]
# ============================================================================
full = [
    # API服务
    "fastapi>=0.104.0",
    "aiofiles>=23.2.0",
    # 异步数据库
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    # 多LLM提供商
    "langchain-deepseek>=0.1.0",
    "langchain-openai>=1.0.0",
    "dashscope>=1.0.0",
    # 视频处理
    "opencv-python>=4.8.0",
    "moviepy>=1.0.3",
    "pillow>=10.0.0",
    # HTTP客户端
    "httpx>=0.25.0",
]

# ============================================================================
# 注意：TOML 不支持变量引用，但 pip 支持组合安装
# 用户可以通过以下方式安装组合：
#   pip install penshot[api,async_db,llm-providers,video]
# 或者我们提供一个 all 分组（安装所有可选依赖）
# ============================================================================
all = [
    "penshot[dev,test,video,docs,api,async_db,llm-providers]",
]

# 便捷别名
default = [
    "penshot[api,async_db]",
]

[project.urls]
Homepage = "https://shot.helpenx.com"
Repository = "https://github.com/neopen/story-shot-agent"
Documentation = "https://pengline.cn/2026/02/7e6cd67dd5ee45248f2276ac145555f5"
Changelog = "https://github.com/neopen/story-shot-agent/releases"
Issues = "https://github.com/neopen/story-shot-agent/issues"

# 注意：这里引用的是内部的Python包名 penshot
[project.scripts]
story-shot-agent = "penshot.cli:main"
vs-agent = "penshot.cli:main"

# 如果使用FastAPI，可以添加一个serve命令
[project.entry-points."console_scripts"]
story-shot-agent-serve = "penshot.cli:serve"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["penshot*"]
exclude = ["tests*", "tests.*"]

# 包含包内数据文件
[tool.setuptools.package-data]
penshot = [
    "*.yaml",
    "*.yml",
    "*.json",
    "*.txt",
    "*.md",
    "templates/*",
    "templates/*/*",
    "config/*.yaml",
    "config/**/*.yaml",
    "neopen/prompts/**/*.yaml",
    "neopen/config/**/*.yaml",
    ".env.example"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_community.*",
    "langgraph.*",
    "chromadb.*",
    "llama_index.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
asyncio_mode = "auto"